tests/negative/test_decl_bad_type_cn.orb
fnc main() {
    let (x:i32 100);
    let (a:(i32 cn*) &x);
    let (b:(i32*) a);
};